--- a/clusterctl/examples/test/machines.yaml.template
+++ b/clusterctl/examples/test/machines.yaml.template
@@ -2,14 +2,14 @@ items:
 - apiVersion: "cluster.k8s.io/v1alpha1"
   kind: Machine
   metadata:
-    generateName: skeleton-controlplane-
+    generateName: test-controlplane-
     labels:
       set: controlplane
   spec:
 - apiVersion: "cluster.k8s.io/v1alpha1"
   kind: Machine
   metadata:
-    generateName: skeleton-node-
+    generateName: test-node-
     labels:
       set: node
   spec:
