--- a/clusterctl/examples/test/provider-components.yaml.template
+++ b/clusterctl/examples/test/provider-components.yaml.template
@@ -44,8 +44,8 @@ spec:
           limits:
             cpu: 100m
             memory: 30Mi
-      - name: skeleton-cluster-controller
-        image: gcr.io/k8s-cluster-api/skeleton-cluster-controller:0.0.1
+      - name: test-cluster-controller
+        image: gcr.io/k8s-cluster-api/test-cluster-controller:0.0.1
         volumeMounts:
           - name: config
             mountPath: /etc/kubernetes
@@ -68,8 +68,8 @@ spec:
           limits:
             cpu: 400m
             memory: 500Mi
-      - name: skeleton-machine-controller
-        image: gcr.io/k8s-cluster-api/skeleton-machine-controller:0.0.1
+      - name: test-machine-controller
+        image: gcr.io/k8s-cluster-api/test-machine-controller:0.0.1
         volumeMounts:
           - name: config
             mountPath: /etc/kubernetes
